[package]
name = "iconcaptcha-solver"
version = "0.2.0"
edition = "2021"
authors = ["Antonio Sousa <herdersonriker@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "0.22.1"
image = "0.25.5"
rayon = { version = "1.10.0", optional = true }
neon = { version = "1", optional = true }

[dev-dependencies]
walkdir = "2.5.0"
rayon = "1.10.0"
neon = "1"

[features]
default = []
speed = ["rayon"]
js = ["neon"]
