[package]
name = "iconcaptcha-solver"
version = "0.2.0"
edition = "2021"
authors = ["Antonio Sousa <herdersonriker@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "0.22.1"
image = "0.25.5"
neon = { version = "1", optional = true }
walkdir = "2.5.0"

[dev-dependencies]
walkdir = "2.5.0"
neon = "1"

[features]
default = ["js"]
js = ["neon"]
